RESOLVED FIXED200171
[iOS] REGRESSION: Keyboard dismisses and reappears when typing 2FA pin on appleid.apple.com
https://bugs.webkit.org/show_bug.cgi?id=200171
Summary [iOS] REGRESSION: Keyboard dismisses and reappears when typing 2FA pin on app...
Daniel Bates
Reported 2019-07-26 11:51:05 PDT
Steps to reproduce: (Occurs with and without a hardware keyboard) The following steps assume two factor authentication (2FA) is enabled on your Apple ID. 1. Visit <https://appleid.apple.com/> and enter you Apple ID credentials. 2. On the 2FA screen, type the pin. There is noticeable flashing of the keyboard as you type the pin.
Attachments
Patch (2.36 KB, patch)
2019-07-26 12:06 PDT, Daniel Bates
no flags
Daniel Bates
Comment 1 2019-07-26 11:51:34 PDT
Daniel Bates
Comment 2 2019-07-26 12:06:00 PDT
Wenson Hsieh
Comment 3 2019-07-26 12:40:26 PDT
Comment on attachment 374981 [details] Patch Seems reasonable.
Daniel Bates
Comment 4 2019-07-26 13:52:19 PDT
Comment on attachment 374981 [details] Patch Clearing flags on attachment: 374981 Committed r247875: <https://trac.webkit.org/changeset/247875>
Daniel Bates
Comment 5 2019-07-26 13:52:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.